now dates contains all the metadataLastUpdated date. so I assigned it to dates_array and I removed the duplicate dates with uniq filter.

--- a/_pages/en/home.html
+++ b/_pages/en/home.html
@@ -63,7 +63,11 @@ permalink: home.html
           {% endfor %}
         {% endfor %}
       {% endfor %}
-      
+
+      {% assign dates = dates | join: "," %}  
+      {% assign dates_array = dates | split: "," %}
+      {% assign dates_array = dates_array | uniq %}
+
       <ul>
         <li><a href="#">[Project name]</a></li>
         <li><a href="#">[Project name]</a></li>
