I assigned the variable LastUpdated to the first element in dates_array. I compare it with the other elements in the same array to find the highest element value which means the last updated date. then I push the value found in lastUpdated_array.

--- a/_pages/en/home.html
+++ b/_pages/en/home.html
@@ -68,6 +68,14 @@ permalink: home.html
       {% assign dates_array = dates | split: "," %}
       {% assign dates_array = dates_array | uniq %}
 
+      {% assign lastUpdated = dates_array | first %}
+      {% for date in dates_array %}
+        {% if date >= lastUpdated %}  
+          {% assign lastUpdated = date %}
+        {% endif %}
+      {% endfor %}
+      {% assign lastUpdated_array = lastUpdated_array  | push: lastUpdated %}
+
       <ul>
         <li><a href="#">[Project name]</a></li>
         <li><a href="#">[Project name]</a></li>
