with this loop, I will be able to find all other lastUpdatedDate dates. First I create another array to push in it all the contains of the main array but without the first last updated. (I had to use this method because I didin't find in liquid a function that can remove directly an element from an array.)

--- a/_pages/en/home.html
+++ b/_pages/en/home.html
@@ -76,6 +76,17 @@ permalink: home.html
       {% endfor %}
       {% assign lastUpdated_array = lastUpdated_array  | push: lastUpdated %}
 
+
+      {% for i in (1..2) %}
+        {% assign dates_array_prime = "" | split: "," %}
+        {% for date in dates_array %}
+          {% if date != lastUpdated %}
+            {% assign dates_array_prime = dates_array_prime  | push: date %}
+          {% endif %}
+        {% endfor %}
+      {% endfor %}
+
+
       <ul>
         <li><a href="#">[Project name]</a></li>
         <li><a href="#">[Project name]</a></li>
