find the other lastUpdated dates. And finally assign the new array dates_array_prime to the main array dates_array. So that the size of dates_array will decrease one element(lastUpdated) in every loop.

--- a/_pages/en/home.html
+++ b/_pages/en/home.html
@@ -84,6 +84,17 @@ permalink: home.html
             {% assign dates_array_prime = dates_array_prime  | push: date %}
           {% endif %}
         {% endfor %}
+
+        {% assign lastUpdatedPrime = dates_array_prime | first %}
+        {% for date in dates_array_prime %}
+          {% if date >= lastUpdatedPrime %}  
+            {% assign lastUpdatedPrime = date %}
+          {% endif %}
+        {% endfor %}
+
+        {% assign lastUpdated_array = lastUpdated_array  | push: lastUpdatedPrime %}
+        {% assign dates_array = dates_array_prime %}
+        {% assign lastUpdated = lastUpdatedPrime %}
       {% endfor %}
 
 
