include codeLastUpdated.html in both version english and french

--- a/_pages/fr/accueil.html
+++ b/_pages/fr/accueil.html
@@ -46,11 +46,7 @@ permalink: accueil.html
   <div class="col-md-4 col-xs-12 pull-right">
     <section class="lnkbx">
       <h2>Derniers codes source ouverts</h2>
-      <ul>
-        <li><a href="#">[Nom du project]</a></li>
-        <li><a href="#">[Nom du project]</a></li>
-        <li><a href="#">[Nom du project]</a></li>
-      </ul>
+      {% include codeLastUpdated.html %} 
     </section>
 
     <section class="lnkbx">
