Features/generate list of last updated osc (#58)
* declare arrays that I have to use after

* recover the metadataLastUpdated from _data. change the date format to YearDay. Push the current date in dates.

* now dates contains all the metadataLastUpdated date. so I assigned it to dates_array and I removed the duplicate dates with uniq filter.

* I assigned the variable LastUpdated to the first element in dates_array. I compare it with the other elements in the same array to find the highest element value which means the last updated date. then I push the value found in lastUpdated_array.

* with this loop, I will be able to find all other lastUpdatedDate dates. First I create another array to push in it all the contains of the main array but without the first last updated. (I had to use this method because I didin't find in liquid a function that can remove directly an element from an array.)

* find the other lastUpdated dates. And finally assign the new array dates_array_prime to the main array dates_array. So that the size of dates_array will decrease one element(lastUpdated) in every loop.

* loop in the lastUpdated_array which contains in order the last updated dates. Then I use these elements to recover the name and the url of the associative date.

* I tried to put the <li> tag in loop but it didn't works with me because there are two arrays to loop in same time.

* create a new file for the lastUpdatedList functionnality

* include codeLastUpdated.html in both version english and french

--- a/_pages/en/home.html
+++ b/_pages/en/home.html
@@ -46,11 +46,7 @@ permalink: home.html
   <div class="col-md-4 col-xs-12 pull-right">
     <section class="lnkbx">
       <h2>Latest Open Source Codes</h2>
-      <ul>
-        <li><a href="#">[Project name]</a></li>
-        <li><a href="#">[Project name]</a></li>
-        <li><a href="#">[Project name]</a></li>
-      </ul>
+      {% include codeLastUpdated.html %} 
     </section>
 
     <section class="lnkbx">
