--- a/_pages/fr/code-source-ouvert-orgs.html
+++ b/_pages/fr/code-source-ouvert-orgs.html
@@ -4,7 +4,7 @@ ref: codeOrgs
 lang: fr
 permalink: /code-source-ouvert-orgs.html
 ---
-<h1 property="name" id="wb-cont">La liste des répertoires de gestion collaborative du code source ouvert </h1>
+<h1 property="name" id="wb-cont">Organisations de code source ouvert</h1>
 <p>Les administrations publiques canadiennes au niveau fédéral, provincial, territorial et municipal utilisent Github, Gitlab et d'autres référentiels de codes pour contribuer au code source ouvert.</p>
 
 {% include codeRepoOrgs.html %}
